	* Section in the control tab can now be expanded and hidden. Thanks TonyH!
	* Manual section in slicer profile editor now allows changing the model thickness and top/bottom thickness. Thanks Muele!
	* Printer settings can be saved and restored from a file. Thanks ra100!
	* Added warning about needing to restart printer for changes to speed limits to take affect

V0.27.1 February 22, 2016

	* Fixed issue where webcam URL's couldn't be changed

V0.27 February 20, 2016

	* Builtin webcam server
	* Slicer profile editor now makes manually settings certain values simplier
	* Fixed issue where unloading/loading filament would hang
	* Fixed isse in slicer profiles where the wall thickness would always be 0.35mm
	* Fixed the need to run the Windows installer twice

V0.26 February 9, 2016

	* Added support for the Micro 3D compatible heatbed. Thanks Loswave!
	* Fixed issue where commands would occasionally be ignored when a lot of commands were sent at once
	* The centering model pre-processor will now reposition the model if it goes out of bounds after being centered
	* A warning is displayed if printing a file without any fan commands
	* The validation pre-processor now includes sub-options that allow removing all existing fan and temperature G-code commands from a file
	* The slicer profile editor now allows easily setting the quality and fill of a print
	* Allows setting a pin on a Raspberry Pi that goes high at the start of the 4th layer of a print and low when a print is canceled of fails. This is intended to be used to drive an external fan, but it can be used for any purpose. Thanks ra100!
	* Fixed DBus issue that caused installations to fail on Linux distros that didn't have the Python DBus module installed

V0.25 January 25, 2016

	* Added support for AMF, COLLADA, and VRML files
	* Made model editor's positioning more accurate when compared to the actual printer